--- a/assets/css/orders.css
+++ b/assets/css/orders.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: tesla;
+    src: url(../font/Tesla/TESLA.ttf);
+}
+@font-face {
+    font-family: Quicksand;
+    src: url(../font/Quicksand/Quicksand-VariableFont_wght.ttf);
+}
+
+
 * {
     margin: 0;
     padding: 0;
