--- a/admin/assets/styles/order.css
+++ b/admin/assets/styles/order.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: tesla;
+    src: url(../../../assets/font/Tesla/TESLA.ttf);
+}
+@font-face {
+    font-family: Quicksand;
+    src: url(../../../assets/font/Quicksand/Quicksand-VariableFont_wght.ttf);
+}
+
 .goBack {
     margin: 1rem 0 0 1rem;
 }
