--- a/admin/assets/styles/viewUsers.css
+++ b/admin/assets/styles/viewUsers.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: tesla;
+    src: url(../../../assets/font/Tesla/TESLA.ttf);
+}
+@font-face {
+    font-family: Quicksand;
+    src: url(../../../assets/font/Quicksand/Quicksand-VariableFont_wght.ttf);
+}
+
+
 .logo {
     font-family: tesla;
 }
